--- a/reactProject/umiapp/src/pages/App/heard.scss
+++ b/reactProject/umiapp/src/pages/App/heard.scss
@@ -23,3 +23,17 @@
   justify-content: space-evenly;
   align-items: center;
 }
+
+.site-form-in-drawer-wrapper {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  width: 100%;
+  padding: 10px 16px;
+  text-align: right;
+  background: #fff;
+  border-top: 1px solid #e9e9e9;
+}
+.btn{
+  margin-bottom: 20px;
+}
